# MiaoAnimEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: DIFFERENTIATION.md  ROADMAP.md
include/aniengine/: aniengine.h  interpolation.h
include/animengine/: animengine.h  curve.h  easing.h  interpolation.h  math.h  spring.h  tween.h
src/: aniengine.cpp  animengine.cpp  curve.cpp  easing.cpp  interpolation.cpp  math.cpp  spring.cpp  tween.cpp
tests/: CMakeLists.txt  curve_multitype_test.cpp  curve_test.cpp  doctest.h  easing_test.cpp  interpolation_test.cpp  math_test.cpp  quat_test.cpp  spring_multitype_test.cpp  spring_test.cpp  test_main.cpp  tween_multitype_test.cpp  tween_test.cpp
